--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask
-pandas
-openpyxl
-google-generativeai
-whisper
-fuzzywuzzy
-Werkzeug
-python-Levenshtein
+Flask==2.3.3
+pandas==2.2.2
+openpyxl==3.1.2
+whisper==1.1.10  # or the version installed via OpenAI’s whisper package
+google-generativeai==0.3.2
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.23.0
+werkzeug==3.0.1
 uvicorn==0.15.0
 gunicorn==20.1.0
